--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -22,4 +22,14 @@
     <string name="orientation_accuracy_low">Низкая</string>
     <string name="orientation_accuracy_medium">Средняя</string>
     <string name="orientation_accuracy_high">Высокая</string>
+    <string name="current_fps_prefix">FPS: %1$s</string>
+    <string name="current_fps_label">%1$.1f</string>
+    <string name="current_source_label">Источник: %1$s</string>
+    <string name="source_rotation_vector">Rotation Vector</string>
+    <string name="source_accel_mag">Accel+Mag</string>
+    <string name="frame_trace_label">Frame trace</string>
+    <string name="frame_trace_off">OFF</string>
+    <string name="frame_trace_summary">1 Hz summary</string>
+    <string name="frame_trace_full">15 Hz full</string>
+    <string name="writer_stats_label">Writer queued: %1$d dropped: %2$d</string>
 </resources>
