--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="current_source_label">Источник: %1$s</string>
     <string name="source_rotation_vector">Rotation Vector</string>
     <string name="source_accel_mag">Accel+Mag</string>
+    <string name="accuracy_hint_figure_eight">Сделайте восьмёрку для калибровки магнитометра.</string>
     <string name="frame_trace_label">Frame trace</string>
     <string name="frame_trace_off">OFF</string>
     <string name="frame_trace_summary">1 Hz summary</string>
