--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -33,4 +33,8 @@
     <string name="frame_trace_summary">1 Hz summary</string>
     <string name="frame_trace_full">15 Hz full</string>
     <string name="writer_stats_label">Writer queued: %1$d dropped: %2$d</string>
+    <string name="sensor_status_active">Сенсор активен</string>
+    <string name="sensor_status_inactive">Сенсор выключен</string>
+    <string name="sensor_status_icon_active">Иконка активного сенсора</string>
+    <string name="sensor_status_icon_inactive">Иконка неактивного сенсора</string>
 </resources>
