--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -62,4 +62,24 @@
     <string name="time_debug_label">Время</string>
     <string name="time_debug_toggle">1 Гц / 0.2 Гц</string>
     <string name="time_debug_back">Назад</string>
+    <string name="astro_debug_label">Astro Debug</string>
+    <string name="astro_debug_title">Astro Debug</string>
+    <string name="astro_debug_lst_degrees">LST: %1$.2f°</string>
+    <string name="astro_debug_lst_unknown">LST: —</string>
+    <string name="astro_debug_lst_time">LST (часы): %1$s</string>
+    <string name="astro_debug_value_unknown">—</string>
+    <string name="astro_debug_horizontal">Az/Alt: %1$.1f° / %2$.1f°</string>
+    <string name="astro_debug_equatorial">RA/Dec: %1$.1f° / %2$.1f°</string>
+    <string name="astro_debug_best_match_object">Лучшее совпадение: %1$s (m=%2$s, созвездие=%3$s)</string>
+    <string name="astro_debug_best_match_constellation">Созвездие: %1$s</string>
+    <string name="astro_debug_best_match_unknown">Лучшее совпадение: —</string>
+    <string name="astro_debug_best_match_unknown_label">Без имени</string>
+    <string name="astro_debug_constellation_unknown">—</string>
+    <string name="astro_debug_target_summary">Цель: %1$s</string>
+    <string name="astro_debug_target_sun">Солнце</string>
+    <string name="astro_debug_target_moon">Луна</string>
+    <string name="astro_debug_target_jupiter">Юпитер</string>
+    <string name="astro_debug_target_saturn">Сатурн</string>
+    <string name="astro_debug_aim_error">Δaz=%1$.1f° Δalt=%2$.1f°</string>
+    <string name="astro_debug_aim_error_unknown">Δaz/Δalt: —</string>
 </resources>
