--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -61,6 +61,19 @@
     <string name="location_phone_source_unknown">—</string>
     <string name="time_debug_label">Время</string>
     <string name="time_debug_toggle">1 Гц / 0.2 Гц</string>
+    <string name="catalog_debug_label">Catalog Debug</string>
+    <string name="catalog_debug_title">Catalog Debug</string>
+    <string name="catalog_debug_probe_header">Пробный запрос</string>
+    <string name="catalog_debug_probe_ra">RA (°)</string>
+    <string name="catalog_debug_probe_dec">Dec (°)</string>
+    <string name="catalog_debug_probe_radius">Радиус (°)</string>
+    <string name="catalog_debug_probe_mag">Предел звёздн. величины</string>
+    <string name="catalog_debug_probe_action">Найти</string>
+    <string name="catalog_debug_probe_results_title">Результаты</string>
+    <string name="catalog_debug_probe_timestamp">Обновлено: %1$s</string>
+    <string name="catalog_debug_self_test_action">Self-test</string>
+    <string name="catalog_debug_self_test_title">Диагностика</string>
+    <string name="catalog_debug_back">Назад</string>
     <string name="time_debug_back">Назад</string>
     <string name="astro_debug_label">Astro Debug</string>
     <string name="astro_debug_title">Astro Debug</string>
