--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -61,8 +61,6 @@
     <string name="location_phone_source_phone">PHONE</string>
     <string name="location_phone_source_unknown">—</string>
     <!-- Tiles (S7.A) -->
-    <string name="tile_tonight_label">Сегодня ночью</string>
-    <string name="tile_more">Ещё</string>
     <string name="time_debug_label">Время</string>
     <string name="time_debug_toggle">1 Гц / 0.2 Гц</string>
     <string name="catalog_debug_label">Catalog Debug</string>
@@ -109,6 +107,10 @@
     <string name="a11y_aim_arrow">Turn %1$s. ΔAz %2$.1f°</string>
     <string name="a11y_alt_scale">Move %1$s. ΔAlt %2$.1f°</string>
     <string name="a11y_open_card">Open card</string>
+    <!-- Tonight tile -->
+    <string name="tile_tonight_label">Tonight</string>
+    <string name="tile_more">More</string>
+    <string name="tonight_targets_label">Tonight targets</string>
     <!-- Settings (S6.E) -->
     <string name="settings_label">Settings</string>
     <string name="settings_title">Settings</string>
@@ -119,4 +121,7 @@
     <string name="aim_haptic_label">Haptic</string>
     <string name="identify_radius_label">Identify radius: %1$.1f°</string>
     <string name="identify_mag_limit_label">Mag limit: %1$.1f</string>
+    <!-- S7.E -->
+    <string name="settings_tile_mirroring_title">Mirroring to phone</string>
+    <string name="settings_tile_mirroring_desc">Send Tonight tile preview to phone</string>
 </resources>
