--- a/wear/src/main/res/values-en/strings.xml
+++ b/wear/src/main/res/values-en/strings.xml
@@ -27,6 +27,7 @@
     <string name="current_source_label">Source: %1$s</string>
     <string name="source_rotation_vector">Rotation Vector</string>
     <string name="source_accel_mag">Accel+Mag</string>
+    <string name="source_phone">Phone</string>
     <string name="accuracy_hint_figure_eight">Draw a figure eight to calibrate the magnetometer.</string>
     <string name="frame_trace_label">Frame trace</string>
     <string name="frame_trace_off">OFF</string>
