feat: add mobile settings datastore and screen

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -99,4 +99,31 @@
     <string name="ar_set_target_button">Выбрать %1$s целью на часах</string>
     <string name="ar_label_meta">mag %1$.1f • Δ%2$.1f°</string>
     <string name="ar_unknown_object">Неизвестный объект</string>
+    <string name="settings_title">Настройки</string>
+    <string name="settings_mirror_title">Mirroring на телефон</string>
+    <string name="settings_mirror_desc">Отображать данные тайла Tonight на телефоне.</string>
+    <string name="settings_ar_title">AR режим</string>
+    <string name="settings_ar_desc">Показывать режим дополненной реальности на телефоне (нужна камера).</string>
+    <string name="settings_privacy_redact_title">Скрывать payload&#39;ы</string>
+    <string name="settings_privacy_redact_desc">Не отправлять подробные payload&#39;ы через мост (часть функций станет недоступной).</string>
+    <string name="settings_location_mode_title">Режим источника локации</string>
+    <string name="settings_location_mode_auto">Авто</string>
+    <string name="settings_location_mode_auto_desc">Использовать автоматически определённые координаты.</string>
+    <string name="settings_location_mode_manual">Ручной ввод</string>
+    <string name="settings_location_mode_manual_desc">Использовать вручную заданные координаты из экрана «Локация».</string>
+    <string name="settings_permissions_header">Разрешения</string>
+    <string name="settings_permission_camera">Камера</string>
+    <string name="settings_permission_location">Локация</string>
+    <string name="settings_permission_granted">Разрешение выдано</string>
+    <string name="settings_permission_not_granted">Разрешение не выдано</string>
+    <string name="settings_permission_request">Запросить</string>
+    <string name="settings_disclaimer">Не использовать для навигации.</string>
+    <string name="settings_policy_link">Политика конфиденциальности</string>
+    <string name="settings_policy_url">https://pointtosky.dev/privacy</string>
+    <string name="settings_button">Настройки</string>
+    <string name="settings_mirror_preview">Tonight Preview</string>
+    <string name="settings_policy_open_error">Не удалось открыть ссылку</string>
+    <string name="settings_mirror_preview_error">Предпросмотр недоступен</string>
+    <string name="settings_redact_payloads_blocked">Защита payload&#39;ов включена — отправка цели недоступна</string>
+    <string name="settings_ar_disabled_toast">Включите AR в настройках телефона</string>
 </resources>
